added Arrow Keys to control

--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
             </div>
             <div id="anleitung" class="information">
                 <h3>Anleitung</h3>
-                <p>W = Oben / A = Links / S = Unten / D = Rechts </p>
+                <p>W,↑ = Oben / A,← = Links / S,↓ = Unten / D,→ = Rechts </p>
                 <br>
-                <p>Hälst du die Lerrtaste gedrückt öffnet sich der Mund und du kannst den Fisch essen. Das Ziel ist es
+                <p>Hältst du die Leertaste gedrückt, öffnet sich der Mund und du kannst den Fisch essen. Das Ziel ist es
                     so viele Fische wie
-                    möglich zu essen
+                    möglich zu essen.
                 </p>
                 <br>
                 <p>Ja ich weiß die Steuerung ist gewöhnungsbedürftig (ist in Arbeit)</p>
