optimized Kraft function

--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
         <div id="centerDiv">
             <div id="headDiv">
                 <h1 id="score">Score: <span id="scoreSpan">0</span></h1>
-                <h1 id="open">Kraft: <span id="openSpan">0</span></h1>
+                <h1 id="open">Kraft: <span id="openSpan">0</span>
+                    <div id="kraftStatus"></div>
+                </h1>
                 <h1 id="timeRemain">Time: <span id="timeSpan">0</span></h1>
             </div>
             <button id="startButton" onclick="start()">Start</button>
